mp11/nightly.txt
Compilation Results:
********************
floorplan.c: In function ‘node_t* init_slicing_tree(node_t*, int)’:
floorplan.c:218:17: error: cannot convert ‘module_t {aka MODULE}’ to ‘module_t* {aka MODULE*}’ in assignment
     ptr->module = modules[n]
                 ^
floorplan.c:219:3: error: expected ‘;’ before ‘}’ token
   }
   ^
make: *** [floorplanner] Error 1

g++ -Wall -O3 -c floorplan.c -o floorplan.o

Failed the nightly test.
This nightly test is focusing on compilation error not functionality test.
This nightly report only tests on the released testcases.
There are many hidden edge testcase for the MP. Please test it yourselve.
HIGHLY RECOMMEND YOU TO START YOUR MP EARLY!!!!!!!
Timestamp: 2022-04-21_12:16:01
